Linkup the useful meterials

--- a/index.html
+++ b/index.html
@@ -6,13 +6,18 @@
     <!-- title goes here -->
     <title>EBooks</title>
     <!-- font-awesome css -->
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="./ASSETS/Vendeors/FontAwesome/CSS/all.min.css">
     <!-- swiper css -->
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="./ASSETS/Vendeors/SwiperJs/swiper-bundle.min.css">
     <!-- custom css -->
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="./ASSETS/CSS/custom.css">
+    <!-- custom responsive css -->
+    <link rel="stylesheet" href="./ASSETS/CSS/responsive.css">
   </head>
   <body>
 
+    <!--[swiper js and javascript files]-->
+    <script src="./ASSETS/Vendeors/SwiperJs/swiper-bundle.min.js"></script>
+    <script src="./ASSETS/Javascript/app.js"></script>
   </body>
 </html>
