--- a/index.html
+++ b/index.html
@@ -15,6 +15,42 @@
     <link rel="stylesheet" href="./ASSETS/CSS/responsive.css">
   </head>
   <body>
+    <!-- header section start -->
+    <header class="header">
+      <div class="header__top">
+        <div class="container">
+          <div class="header__top-container">
+            <div class="header__logo">
+              <a href="#"><i class="fas fa-book"></i>eBooks</a>
+            </div>
+            <form action="#" class="header__search-form">
+              <input type="text" name="search" id="search-form" placeholder="Search here....">
+              <label for="search-form" class="fas fa-search"></label>
+            </form>
+            <div class="header__icons">
+              <div id="search-btn" class="fas fa-search"></div>
+              <a href="#" class="fas fa-heart"></a>
+              <a href="#" class="fas fa-shopping-cart"></a>
+              <div id="login-btn" class="fas fa-user"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="header__navbar">
+        <div class="container">
+          <nav class="header__navbar-container">
+            <ul class="header__menu">
+              <li><a href="#home">Home</a></li>
+              <li><a href="#features">Features</a></li>
+              <li><a href="#arrivals">Arrivals</a></li>
+              <li><a href="#reviews">Reviews</a></li>
+              <li><a href="#blogs">Blogs</a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </header>
+    <!-- header section end -->
 
     <!--[swiper js and javascript files]-->
     <script src="./ASSETS/Vendeors/SwiperJs/swiper-bundle.min.js"></script>
