Bottom Navigation Markup and Style done

--- a/index.html
+++ b/index.html
@@ -52,6 +52,20 @@
     </header>
     <!-- header section end -->
 
+    <!-- bottom navigation section start -->
+    <section class="navigation">
+      <div class="container">
+        <nav class="navigation__menu">
+          <a href="#home" class="fas fa-home"></a>
+          <a href="#features" class="fas fa-list"></a>
+          <a href="#arrivals" class="fas fa-tags"></a>
+          <a href="#reviews" class="fas fa-comment"></a>
+          <a href="#blogs" class="fas fa-blog"></a>
+        </nav>
+      </div>
+    </section>
+    <!-- bottom navigation section end -->
+
     <!--[swiper js and javascript files]-->
     <script src="./ASSETS/Vendeors/SwiperJs/swiper-bundle.min.js"></script>
     <script src="./ASSETS/Javascript/app.js"></script>
